--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <base target="_blank">
 
     <title>getUserMedia</title>
-
-    <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
     <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../../../css/main.css">
+    <link rel="stylesheet" href="./main.css">
 
 </head>
 
@@ -53,7 +51,7 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js"></script>
 
-<script src="../../../js/lib/ga.js"></script>
+<!-- <script src="../../../js/lib/ga.js"></script> -->
 
 </body>
 </html>
