Add cameras to dom

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="errorMsg"></div>
     <p>Display the video stream from <code>getUserMedia()</code> in a video element.</p>
-    <div class="cameras"></div>
+    <div id="cameras"></div>
 </div>
 
 <script src="./test/js/main.js"></script>
